--- a/css/style.css
+++ b/css/style.css
@@ -75,20 +75,23 @@ body{
 }
 
 .letter-body{
-
+margin-top: 5%;
 text-align: left;
 font-size: 30px;
 border: black solid 1px;
 border-radius: 10px;
 
+animation: roll 3s infinite;
+animation-direction: alternate;
 }
-.letter-body span{
+.letter-body #once{
   font-size: 40px;
   color: #FF4136;
+
   
 }
 .letter-footer{
-
+margin-top: 10%;
 animation: shake 2s infinite;
 text-align: right;
 font-size: 50px;
@@ -96,7 +99,40 @@ font-size: 50px;
 }
 
 
+@keyframes shimmy {
+  0% {
+    transform: translate(0, 0);    
+  }
+  100% {
+    transform: translate(20px, 50px);
+  }
+}
 
+@keyframes roll {
+  0% {
+    transform: rotate(0);
+  }
+  25% {
+    transform: rotate(5deg);
+  }
+  50% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(-5deg);
+  }
+}
+
+@keyframes fadeInDown {
+  0% {
+     opacity: 0;
+     transform: translateY(-20px);
+  }
+  100% {
+     opacity: 1;
+     transform: translateY(0);
+  }
+} 
 
 @keyframes blink{
 
